Partial fix for overflow issue in the header

--- a/style.css
+++ b/style.css
@@ -4217,6 +4217,7 @@ a.to-the-top > * {
 
 	.primary-menu-wrapper {
 		display: block;
+		width: 100%;
 	}
 
 	/* HEADER TOGGLES */
